static/css/style.css
/*GENERAL STYLING*/
*{
    box-sizing: border-box;
    font-family: Verdana, "Arial", "Tahoma", "sans-serif";
}/*box-sizing set as border-box, primary font for everything is verdana*/

html, body{
    height: 100%;
    margin: 0;
    padding: 0;
}

.indexEmail{
    min-width: 25%;
}

.formBg{
    background-color:#F5F5F5 ;
}

.bannerImg{
    max-height: 85vh;
    width: 100%;
    position: relative;
}/*sets the height and width of the banner images for the services and home page*/

.headerHeading{
    padding:1em 1em 0em 1em;
    text-align: center;
    font-size: 4em;
}/*sets padding, center text alignment and font size for eading under banner images*/

.paragraphBelowBanner{
    font-size: 2em;
    text-align: center;
    margin: 1em;
    padding: 1em;
}/*sets font-size, text align,margin and paddings for the paragraphs below the page banner images*/

.textCenter{
    text-align: center;
}/*centers text*/

/*NAVBAR*/
.stickyNav {
    position: fixed;    
    top: 0px;
    width: 100%;
    z-index: 1;
    background-color:#F5F5F5 !important;
}/*Make navbar always at top of page, sets its width to 100% and its z index to 1 to have it always visible*/

.navbar-right{
    margin-right: 2em;
}/*Sets margin for the 'Book an Appontment' navbar heading*/

.navbar-light .navbar-nav .nav-link{
    transition-duration: .5s;
    transition-timing-function: ease-in-out;
    margin: 0.5em 1em;
}

.navbar-light .navbar-nav .nav-link:hover{
    font-size: 1.1em;
}/*Increases the font size of whatever navbar heading is hovered over*/

.logo{
    height: 4em;
    width: 8em;
}

.formSubmitPageWrap{
    height: 94vh;
}/*This allows the footer to be shown at the bottom of the page on the contact form submit confirmation page*/


/*FORMS*/
/* Style form inputs */
input[type=text], select, textarea, input[type=email] {
    width: 100%; /* Full width */
    padding: 13px; 
    border: 1px solid rgb(221, 221, 221);  
    border-radius: 4px; /* Rounded border */
    margin-top: 6px; 
    margin-bottom: 16px; 
    resize: vertical /* User to vertically resize the textarea */
  }

/*INDEX PAGE*/
.jumbotron{
    font-size: 3em;
    text-align: center;
    padding:4em;
    height: 80%;
    background-color: black;
    color: white;
}

.jumbotron .carousel-control-prev,
.jumbotron .carousel-control-next{
    max-height: 1em;
    position: absolute;
    top: 50%;
}

.carousel-item{
    overflow: hidden;
    height: 100%;
}

.fa-star{
    color:#FFD700;
    font-size: .7em;
}/*Sets the colour and size of stars for testimonials*/

.aboutUs{
    text-align: center;
    font-size: 2em;
    font-weight: lighter;
    padding: 1em;
}

.questionImg{
    padding: .5em;
    width: 100%;
    height: 80%;
    margin: 10% 0;
    border: 1px solid black;
    border-radius: 50%;
}/*Styling for the question mark image on the index page*/

.whyAccordionBox{
    text-align: center;
    margin: 10% 0;
    height: 80%;
}/*Text area for Why choose us section*/

.card a{
    text-decoration: none;
}





.accordionImage{
    width: 100%;
    height: 100%;
}

#homeBottomAccordion{
    width: 100%;
    padding: 1em 0;
}/*Bottom accordion on home page where address and phone number area*/

iframe{
    height: 100%;
}

.bottomAccordionText{
    font-size: 1.5em;
    height: 80%;
    margin: 10% 0%;
    text-align: center;
}/*Styles the address on the index page*/

.card button{
    width: 100%;
}/*allows the full width of the accordion to be a button*/

.card button{
    transition: 0.5s;
    transition-timing-function: ease-in-out;   
}

.card button:hover{
    text-decoration: none;
    font-size: 1.1em;
}/*stops the underline of the accordion headings when they are hovered over*/

.card button:focus{
    text-decoration: none;
    font-size: 1.1em;
}/*if a accordion is opened the heading for the accordion is increased in size*/

.indexEmail{
    max-width: 10%;
}


/*SERVICES PAGE*/
.serviceImg{
    width: 100%;
    height: 100%;
}/*This class is used for all the service images beside the service text descriptions on the services page*/

@media only screen and (min-width: 480px){
    .serviceImg{
        height: 80%;
        margin: 10% 0%;
    }
}




.serviceBox{
    padding: 0.1em;
}

.serviceBox h2{
    text-decoration: underline;
}

.serviceBox h2{
    padding: 1em;
}

@media only screen and (min-width: 600px){
    .serviceDescription{
        height: 80%;
        margin: 10% 0%;
    }
}

.serviceIconArea{
    font-size:8em;
    text-align: center;
}

.fa-euro-sign, .fa-clock{
    transition: 0.5s;
    transition-timing-function: ease-in-out;
}
.fa-clock:hover{
    color: red;
}/*Clock icons for services duration changes to red when hovered over*/

.fa-euro-sign:hover{
    color: green;
}/*Euro icons for service cost changes to green when hovered over*/

/*Tyre service area*/
.centerButton{
    width: 40%;
    margin: 5% 30%;
}

/*BOOK AN APPOINTMENT*/
.bookingForm{
    width: 100%;
    display: inline-block;
    margin-left: auto;
    margin-right: auto;
}

.bookingFormTable{
    margin-left: auto;
    margin-right: auto;
    width: 80%;
}

#bookingPhone, #bookingEmail, #servicesRequired, #bookingDate, #bookingTime{
    width: 100%;
}/*Makes some of the booking form input areas 100% in width*/

#extraBookingDetails{
    width: 100%;
    height: 8em;
}/*styling for text area on booking form*/

.requiredInput{
    color: red;
    font-size: 2em;
}

.bookingFormError{
    color:#ff0000;
    text-align: center;
}/*If error on booking form they will be coloured red*/

.hiddenCollectionArea{
    display: none;
}

.hiddenRegKnownArea{
    display: none;
}

.hiddenRegUnKnownArea{
    display: none;
}

#submitDetailsBtn{
    display: none;
}/*hides submit vutton on booking form until check details is clicked*/

/*FOOTER*/
footer{
    line-height: 2em;
    background-color: #F5F5F5;
    letter-spacing: 2px;
    margin-top: 2em;
}

footer p {
    text-align: center;
} /* Footer text styling */

.card-body{
    border: none;
}/*Removes the border from the bootstrap accordian*/

/*CONTACT US*/
/* While the mouse is over the submit button, add a lighter grey color */
.contactUsBg{
    background-color:#f2f2f2;
}
.contactUsFormContainer input[type=submit] {
    background-color: #545a54;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
  }/*styles the submit button on the contact us form*/

.contactUsFormContainer input[type=submit]:hover {
    background-color: #777777;
}/*submit button on contact form changes bg color when hovered*/
  
/* Background colour and padding around the form */
.formContainer {
    border-radius: 5px;
    background-color: #f2f2f2;
    padding: 80px;
    padding-right: 20%;
    padding-left: 20%;
  }

.box {
    width: 100%;
    height: 450px;
    background-size: cover;
    opacity: 0.7;
    position: relative;
}

/* When moving the mouse over the background image, it is no longer transparent */
.box:hover{
    opacity:1;
  }

.imagetext{
    color: white;
    text-align: center;
    font-size: 3em;
    position: absolute;
    top: 50%;
    width: 100%; 
}/* Styling the text over the key image */

#submitText {
    margin-top: 3em;
    margin-bottom: 3em;
    text-align: center;
  }/* Style submission confirmation text */

/*FAQ*/



.faqimg:hover{
    opacity:1;
}/* When mouse hovers over mechanc image, opacity is 1.*/

